style/style.css
/* ... */
    .dropdown_container .dropdown-menu .dropdown-item:active{
        background-color: transparent;
    }
    .dropdown_btn{
        border: none;
        background-color: transparent;
        font-weight: bold;
        color: rgb(112,117,103);
    }


/* index html file */
/* hero section */
    .background-img-container{
        position: absolute;
        bottom: 0;
    }
    .background-img-container img{
        width: 300px;
        opacity: .5;
    }

/* custom card for all pages */
/* Best Selling Section */
    .custom_card{
        background-color: rgb(235, 250, 209);
        border-radius: 10px;
        box-shadow: 0 6px 10px 2px rgba(0, 0, 0, 0.2);
        min-width: 16rem;
        max-width: 16rem;
        max-height: 25rem;
        min-height: 25rem;
        position: relative;
        border: none;
        cursor: pointer;
    }
    .custom_card .wishlist_btn{
        position: absolute;
        color: green;
        top: 10px;
        right: 20px;
        cursor: pointer;
        background-color: rgb(241, 242, 245);
        padding: 10px 12px;
        border: none;
        border-radius: 50%;
        box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.2);
        transform: scale(0);
    }
    .custom_card:hover .wishlist_btn{
        transition: all .2s;
        transform: scale(1);
    }
    .custom_card:hover{
        box-shadow: 0 7px 10px 3px rgba(0, 0, 0, 0.2);
    }
    .custom_card img{ 
        max-height: 10rem;
        min-height: 10rem;
        min-width: 10rem;
        max-width: 10rem;
    }
    .custom_card .products_img_container{
        position: relative;
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        overflow: hidden;
    }
    .custom_card:hover .quick_view_holder{
        transform: translateY(-0.1px);
        transition: all .2s;
    }
    .custom_card .quick_view_holder {
        position: absolute;
        left:0;
        right: 0;
        bottom: 0;
        background-color:rgb(106, 147, 60);
        text-align: center;
        color: white;
        border: none;
        padding: 10px 0;
        transform: translateY(50px);
        transition: all .2s;
    }
    .custom_card .product_description{
        width: 100%;
    }
    .custom_card .product_description .label_name{
        color: rgb(116, 148, 80);
        font-weight: 400;
    }
    .custom_card .product_description .product_name{
        font-weight: bold;
    }
    .custom_card .product_description .product_rating{
        font-size: 13px;
    }
    .custom_card .product_description .product_price{
        font-size: 13px;
    }
    .custom_card .product_description .product_location{
        padding-top: 3px;
        font-size: 13px;
        color: rgb(136, 136, 136);
    }
    .custom_card .product_description .addToCart{
        border: 2px solid rgb(67, 102, 27);
        background-color: transparent;
        margin-top: 10px;
        padding: 5px 15px;
        font-weight: bold;
        color: rgb(67, 102, 27);
    }
    .custom_card .product_description .addToCart:hover{
        background-color:rgb(67, 102, 27);
        transition: all .2s;
        color: white;
        font-weight: bold;
    }

/* index page */
/* Promo */
    .promo-container{
        color: white;
        z-index: 10;
    }
    .promo-bg-container{
        background-image: url("https://www.tastingtable.com/img/gallery/new-report-shows-organic-food-is-set-to-become-more-popular-than-ever/intro-1654106213.jpg");
        background-position: center;
        background-repeat: no-repeat;
        background-size: cover;
        position: relative;
        z-index: 1;
    }
    .promo-bg-container .dark-bg-effect{
        background-color: black;
        opacity: 0.5;
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: -1;
    }

/* testimonials */
    .testimonial-card{
        background-color: white;
        padding: 15px;
        box-shadow: 0 10px 15px 1px rgba(0, 0, 0, 0.2);
    }

    .testimonial-card .rating-holder{
        height: 12rem;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;

    }
    .testimonial-card .rating-holder .user-message{
        color: gray;
    }
    .testimonial-card .user-holder{
        height: 4rem;
    }
    .testimonial-card .user-holder img{
        width: 2.5rem;
    }
    .testimonial-card .user-holder .user-name{
        color: rgb(112, 112, 112);
        font-size: 15px;
        padding-top: 5px;
    }
/* footer for all pages */
/* footer */
    footer p{
        color: rgb(112, 112, 112);
    }
    footer a{
        text-decoration: none;
        color: rgb(112, 112, 112);
    }
    footer a:hover{
        text-decoration: none;
        color: white;
    }


/* ******* */
/* GROCERIES SECTION */
/* ******* */

    .sort_container .select_sort_container select{
        border-top: none;
        border-right: none;
        border-bottom: 1px solid rgb(67, 102, 27);
        border-left: none;
        padding: 10px 5px;
        background-color: transparent;
        color: rgb(94,134,49)
    }
    .page_counter_container button{
        border: none;
        background-color: rgb(67, 102, 27);
        color: white;
        padding: 3px 10px;
    }
    .page_counter_container .page_counter{
        color: black;
        padding: 2px 10px;
    }


/* ====== */
/* Contact */
/* ====== */
.contact_container .contact_details .form_container form{
    width: 100%;
}
.contact_container .contact_details .form_container form input[type="text"]{
    margin-bottom: 15px;
    padding: 10px 5px;
    border-top: none;
    border-left: none;
    border-right: none;
    border-bottom: 1px solid rgb(203, 235, 169);
    outline: none;
    background-color: transparent;
}
/* ... */

